--- a/waybar/style.css
+++ b/waybar/style.css
@@ -34,7 +34,7 @@ window#waybar {
 button {
   /* Use box-shadow instead of border so the text isn't offset */
   box-shadow: inset 0 -3px transparent;
-  /* background-color: rgba(42,46,56,0.4); */
+  /* background-color: rgba(199,46,56,0.4); */
   /* Avoid rounded borders under each button name */
   color: #ffffff;
   border: none;
@@ -54,7 +54,7 @@ button:hover {
 
 #workspaces button.focused {
   /*    box-shadow: inset 0 -2px #c9545d; */
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(224, 222, 244, 0.2); /* == #e0def4*/
   color:#fcdbd9;
   border-top: 2px solid #fcdbd9;
 }
